--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,6 +5,14 @@
  */
 
 /* You can override the default Infima variables here. */
+@import url('https://www.zrobank.com.br/fonts/gilroy.css?family=Gilroy');
+
+body {
+  font-family: 'Gilroy', sans-serif !important;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Gilroy', sans-serif !important;
+}
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
