--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,7 +8,11 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background: linear-gradient(90deg, rgba(145,193,58,1) 0%, rgba(132,195,110,1) 50%, rgba(101,199,239,1) 100%);
+  background-image: url("/img/hero-bg.svg");
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 @media screen and (max-width: 996px) {
