--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,8 +3,35 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
-
 /* You can override the default Infima variables here. */
+
+@font-face {
+  font-family: "Gilroy Medium";
+  src: url("/fonts/gilroy/Gilroy-Medium.woff"),
+    url("/fonts/gilroy/Gilroy-Medium.ttf"),
+    url("/fonts/gilroy/Gilroy-Medium.eot");
+}
+
+@font-face {
+  font-family: "Gilroy Bold";
+  src: url("/fonts/gilroy/Gilroy-Bold.woff"),
+    url("/fonts/gilroy/Gilroy-Bold.ttf"),
+    url("/fonts/gilroy/Gilroy-Bold.eot");
+}
+
+body {
+  font-family: "Gilroy Medium", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Gilroy Bold", sans-serif;
+}
+
 :root {
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
@@ -18,13 +45,13 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
+[data-theme="dark"] {
+  --ifm-color-primary: #27c2c7;
+  --ifm-color-primary-dark: #27c2c7;
+  --ifm-color-primary-darker: #27c2c7;
+  --ifm-color-primary-darkest: #27c2c7;
+  --ifm-color-primary-light: #27c2c7;
+  --ifm-color-primary-lighter: #27c2c7;
+  --ifm-color-primary-lightest: #27c2c7;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
