--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -8,11 +8,15 @@
   text-align: center;
   position: relative;
   overflow: hidden;
-  background-image: url("/img/hero-bg.svg");
+  background-image: url("/img/hero-bg-blue.jpg");
   background-position: top;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+}
+
+.hero__title {
+  color: "#FFF"
 }
 
 @media screen and (max-width: 996px) {
