--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -3,6 +3,17 @@
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  position: relative;
+  z-index: 100;
+}
+
+.featureRow {
+  gap: 2rem;
+}
+
+.featureCard {
+  background: rgba(84, 183, 232, 0.30);
+  border-radius: 30px;
 }
 
 .featureSvg {
