--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -12,11 +12,36 @@
 }
 
 .featureCard {
-  background: rgba(84, 183, 232, 0.30);
+  display: grid;
+  place-items: baseline;
+  background: rgba(84, 183, 232, 0.3);
   border-radius: 30px;
 }
 
-.featureSvg {
-  height: 200px;
-  width: 200px;
+.featureCard p {
+  margin-bottom: 0;
+}
+
+.featureCardItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  height: 100%;
+  padding: 1rem;
+}
+
+.featureHeader {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.featureHeader img {
+  width: 20px;
+  height: 20px;
+}
+
+.featureHeader h3 {
+  margin-bottom: 0;
 }
