Fix: Returning with the list of deprecated endpoints

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -182,3 +182,7 @@ input[type='number'] {
   content: 'PATCH';
   background: var(--ifm-color-yellow-light);
 }
+
+.menu__list-item--deprecated {
+  text-decoration: line-through;
+}
